--- a/study/callbacks.html
+++ b/study/callbacks.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <button onclick="location.href = './promises.html'">Promises</button>
-    <button onclick="location.href = './callbacks.html'">Callbacks</button>
-    <button onclick="location.href = './promises.html'">Promises</button>
-
+    <script type="module" src="./callbacks.js"></script>
 </body>
 </html>
