--- a/study/promises.html
+++ b/study/promises.html
@@ -7,10 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <button onclick="location.href = './promises.html'">Promises</button>
-    <button onclick="location.href = './callbacks.html'">Callbacks</button>
-    <button onclick="location.href = './promises.html'">Promises</button>
-
+    <!-- <script type="module" src="./promises2.js"></script> -->
+    <script type="module" src="./randomStuff.js"></script>
 </body>
 </html>
